--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cobe": "^0.6.4",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
